--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <h1>Welcome to Nirin App Support</h1>
     <p>If you are experiencing any issues or have questions about the app, please contact us:</p>
-    <p>Email: <a href="mailto:support@yourdomain.com">support@yourdomain.com</a></p>
+    <p>Email: <a href="mailto:robinfederico636@gmail.com">robinfederico636@gmail.com</a></p>
     <p>You can also visit our <a href="https://github.com/4mater4su/nirin-support/issues">GitHub Issues</a> page to report bugs.</p>
 </body>
 </html>
