--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nirin App Support</title>
+    <title>Nirin App – Support und Datenschutz</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,9 +28,19 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Nirin App Support</h1>
-    <p>If you are experiencing any issues or have questions about the app, please contact us:</p>
-    <p>Email: <a href="mailto:robinfederico636@gmail.com">robinfederico636@gmail.com</a></p>
-    <p>You can also visit our <a href="https://github.com/4mater4su/nirin-support/issues">GitHub Issues</a> page to report bugs.</p>
+
+    <div class="section">
+        <h2>Support</h2>
+        <p>Wenn du Fragen oder Probleme mit der App hast, kontaktiere uns bitte:</p>
+        <p>Email: <a href="mailto:robinfederico636@gmail.com">robinfederico636@gmail.com</a></p>
+        <p>Du kannst auch unsere <a href="https://github.com/4mater4su/nirin-support/issues">GitHub-Issue-Seite</a> besuchen, um Fehler zu melden.</p>
+    </div>
+
+    <div class="section">
+        <h2>Datenschutzrichtlinie</h2>
+        <p>Die Nirin App sammelt keine personenbezogenen Daten. Alle Audioinhalte werden lokal auf deinem Gerät gespeichert und es findet keine Übertragung an Dritte oder Server statt.</p>
+        <p>Falls du weitere Fragen zum Datenschutz hast, kontaktiere uns unter: <a href="mailto:robinfederico636@gmail.com">robinfederico636@gmail.com</a></p>
+    </div>
+    
 </body>
 </html>
