--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         h1 {
             color: #333;
         }
+        h2 {
+            color: #444;
+        }
         p {
             color: #555;
         }
@@ -24,6 +27,9 @@
         }
         a:hover {
             text-decoration: underline;
+        }
+        .section {
+            margin-bottom: 40px;
         }
     </style>
 </head>
